Revert "에어비앤비 클론 "

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta property="description" content="에어비앤비와 함께 잊지 못할 여행이 시작됩니다. 주변 또는 멀리 떨어진 장소에서 벌어지는 모험들을 찾아보고 전 세계의 독특한 숙소와 체험, 장소를 직접 체험해 보세요.">
+        <meta name="description" content="Web site created using create-react-app" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>숙소, 체험, 장소를 모두 한 곳에서 - 에어비앤비</title>
+        <title>React App</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
